[gd_scene load_steps=14 format=3 uid="uid://djw4kv4pteyr5"]

[ext_resource type="Script" path="res://UI/COOP_UI/Scripts/Choise_UI.gd" id="1_kl3pd"]
[ext_resource type="Theme" uid="uid://bqojxsiorhe8d" path="res://UI/styles/Main_Theme.tres" id="2_n4gnh"]
[ext_resource type="Theme" uid="uid://cgg52bqvjuehj" path="res://UI/styles/Button_Style.tres" id="3_i27nw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpd41"]
content_margin_left = 45.0
bg_color = Color(1, 0, 0, 1)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qbupy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya3pg"]
content_margin_left = 45.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpxl8"]
content_margin_left = 45.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpkl0"]
content_margin_left = 48.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fq0u8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_80k44"]
content_margin_left = 45.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mrsbg"]
bg_color = Color(0.905882, 0.905882, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epaw5"]
bg_color = Color(0.905882, 0.905882, 0, 1)

[sub_resource type="Theme" id="Theme_w5esa"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/font_sizes/font_size = 32
Button/styles/disabled = SubResource("StyleBoxFlat_mpd41")
Button/styles/focus = SubResource("StyleBoxEmpty_qbupy")
Button/styles/hover = SubResource("StyleBoxFlat_ya3pg")
Button/styles/normal = SubResource("StyleBoxFlat_jpxl8")
Button/styles/pressed = SubResource("StyleBoxFlat_cpkl0")
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_fq0u8")
HSlider/styles/grabber_area_highlight = SubResource("StyleBoxFlat_fq0u8")
Label/colors/font_color = Color(0, 0, 0, 1)
OptionButton/styles/pressed = SubResource("StyleBoxFlat_80k44")
Panel/styles/panel = SubResource("StyleBoxFlat_mrsbg")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_epaw5")

[node name="Choise_menu" type="CanvasLayer"]
script = ExtResource("1_kl3pd")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Choise_Player" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_n4gnh")

[node name="MarginContainer" type="MarginContainer" parent="Control/Choise_Player"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Choise_Player/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Choise_Player/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Control/Choise_Player/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_w5esa")

[node name="ALEX" type="Button" parent="Control/Choise_Player/MarginContainer/VBoxContainer/HBoxContainer/Panel" groups=["audio_buttons"]]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_i27nw")
text = "ALEX"

[node name="Panel2" type="Panel" parent="Control/Choise_Player/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_w5esa")

[node name="ALISA" type="Button" parent="Control/Choise_Player/MarginContainer/VBoxContainer/HBoxContainer/Panel2" groups=["audio_buttons"]]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_i27nw")
text = "ALISA"

[connection signal="button_down" from="Control/Choise_Player/MarginContainer/VBoxContainer/HBoxContainer/Panel/ALEX" to="." method="_on_alex_button_down"]
[connection signal="button_down" from="Control/Choise_Player/MarginContainer/VBoxContainer/HBoxContainer/Panel2/ALISA" to="." method="_on_alisa_button_down"]
